# angelsenCppWeb

./: .gitignore  CMakeLists.txt  README.md
Angelsen/: CMakeLists.txt  config.json
Angelsen/src/: Config.cpp  Config.h  ControllerBlogFeature.cpp  ControllerBlogFeature.h  ControllerBlogList.cpp  ControllerBlogList.h  ControllerBlogPost.cpp  ControllerBlogPost.h  ControllerContact.cpp  ControllerIndex.cpp  ControllerIndex.h  InputParser.h  ServerImplementation.h  ServerImplementation.tpp  main.cpp
Angelsen/website/: blog_feature.html  blog_feature_element.html  blog_list.html  contact_confirmation.html  index.html  template.html
Angelsen/website/blog/: blogList.json
Angelsen/website/blog/2019/: 1_CppWebsite.html  2_Presentation.html  blog-detail.html
Angelsen/website/css/: templatemo.css
AngelsenSoftwareSystems/: CMakeLists.txt  config.json
AngelsenSoftwareSystems/src/: Config.h  ControllerContact.cpp  ControllerContact.h  main.cpp
AngelsenSoftwareSystems/website/: contact_confirmation.html  index.html
common/: CMakeLists.txt
common/Jinja2CppLight/: CMakeLists.txt  jinja2cpplight_unittests
common/Jinja2CppLight/src/: Jinja2CppLight.cpp  Jinja2CppLight.h
common/easyweb/: CMakeLists.txt  WebFile.cpp  WebFile.h
common/http/: CMakeLists.txt  EmailClientSendInBlue.cpp  EmailClientSendInBlue.h  HttpUtility.cpp  HttpUtility.h
common/http/Simple-Web-Server/: CMakeLists.txt  README.md
common/http/Simple-Web-Server/tests/: CMakeLists.txt  assert.hpp  io_test.cpp  parse_test.cpp
